# sgl-kernel-xpu

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.xpu_kernel  log
include/: sgl_flash_kernel_ops.h
python/sgl_kernel/: flash_attn.py
src/: CMakeLists.txt  FMHADecodeXe20.cmake  GroupGemmXe20.cmake  torch_extension_sycl.cc
src/sycl/: GroupGemmXe20.cpp  GroupGemmXe20LauncherInstance.cpp.in  flash_attention.cpp  xe_fmha_fwd_decode_kernel.cpp.in
src/sycl/comm/: common.h
src/sycl/kernels/chunk_prefill/: chunk_prefill_runner.hpp  xe_chunk_prefill.hpp  xe_flash_attn_chunk_prefill_epilogue.hpp  xe_flash_attn_chunk_prefill_mma.hpp  xe_flash_attn_chunk_prefill_softmax_epilogue.hpp  xe_fmha_fwd_epilogue.hpp  xe_fmha_fwd_kernel.hpp  xe_fmha_fwd_mainloop.hpp  xe_tile_scheduler.hpp
src/sycl/kernels/flash_attention/: fmha_fusion.hpp  xe_fhma_fwd_kernel.hpp  xe_fmha_fwd_docode_runner.hpp  xe_tile_scheduler.hpp
src/sycl/kernels/flash_attention_v2/: chunk_prefill_runner.hpp  xe_fmha_fwd_chunk_prefill_dispatch.hpp  xe_fmha_fwd_chunk_prefill_runner.hpp  xe_fmha_fwd_decode_dispatch.hpp  xe_fmha_fwd_decode_runner.hpp  xe_fmha_fwd_prefill_dispatch.hpp  xe_fmha_fwd_prefill_runner.hpp
src/sycl/kernels/flash_attention_v2/collective/: xe_fmha_fwd_epilogue.hpp  xe_fmha_fwd_mainloop.hpp
src/sycl/kernels/flash_attention_v2/kernel/: chunk_prefill_epilogue.hpp  chunk_prefill_kernel.hpp  chunk_prefill_mainloop.hpp  chunk_prefill_tile_scheduler.hpp  xe_fhma_fwd_kernel.hpp  xe_tile_scheduler.hpp
tests/: test_flash_attention.py
